--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,6 @@ html
 	min-height:100%;
 	height:100%;
 	width:600;
-	border:1px solid white;
 } 
 
 .empty
@@ -136,9 +135,23 @@ html
 	font-weight:bold;
 	text-decoration:none;
 	padding:5px 8px;
+	transition: all 0.5s ease-in-out;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
 }
 
-#mainmenu ul li a:hover, #mainmenu ul li.active a
+#mainmenu ul li a:hover 
+{
+	color: white;
+	text-decoration:none;
+	transform: translate(0, 100px);
+	-webkit-transform: translate(0, 100px);
+	-o-transform: translate(0, 100px);
+	-moz-transform:translate(0, 100px);
+}
+
+#mainmenu ul li.active a
 {
 	color: white;
 	text-decoration:none;
