--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,17 @@ html
 	display: inline;
 }
 
+#mainmenu ul li div
+{
+	display:inline;
+}
+
+#divMenu
+{
+	display:inline;
+	position:relative;
+}
+
 #mainmenu ul li a
 {
 	color:#a6a6a6;
@@ -135,54 +146,12 @@ html
 	font-weight:bold;
 	text-decoration:none;
 	padding:5px 8px;
-	animation-name: roll;
-	animation-duration: 1s;
-	animation-iteration-count:1;
-	animation-timing-function:linear;
-	-webkit-animation-name: roll;
-	-webkit-animation-duration: 1s;
-	-webkit-animation-iteration-count:1;
-	-webkit-animation-timing-function:linear;
-	
-}
-
-@keyframes roll
-{
-	from {top:0px; left:0px;}
-	20%   {transform: translateY(25px);}
-	40%	  {top:-50px, left:0px;}
-	60%   {transform: translateY(50px);}
-	80%   {top:-50px; left:0px;}
-	to	 {transform:translateY(25px);}
-}
-
-@-webkit-keyframes roll
-{
-	from {top:0px; left:0px;}
-	20%   {-webkit-transform: translateY(25px);}
-	40%	  {top:-50px, left:0px;}
-	60%   {-webkit-transform: translateY(50px);}
-	80%   {top:-50px; left:0px;}
-	to	 {-webkit-transform:translateY(25px);}
 }
 
 #mainmenu ul li a:hover 
 {
 	color: white;
 	text-decoration:none;
-	/*transform: translate(0, 100px) translate(0, -200px);
-	-webkit-transform: translate(0, 100px) translate(0, -200px);
-	-o-transform: translate(0, 100px) translate(0, -200px);
-	-moz-transform:translate(0, 100px) translate(0, -200px);
-	-ms-transform:translate(0, 100px) translate(0, -200px);*/
-	animation-name: roll;
-	animation-duration: 1s;
-	animation-iteration-count:1;
-	animation-timing-function:linear;
-	-webkit-animation-name: roll;
-	-webkit-animation-duration: 1s;
-	-webkit-animation-iteration-count:1;
-	-webkit-animation-timing-function:linear;
 }
 
 #mainmenu ul li.active a
