--- a/css/main.css
+++ b/css/main.css
@@ -4,25 +4,25 @@ body
 	padding: 0;
 	color: white;
 	font: normal 12pt Garamond, Arial,Helvetica,sans-serif;
-	--background: #EFEFEF;
 	background: #000000;
 	height:100%;
 	min-height:100%;
-	width:95%;
+	width:100%;
 }
 
 html
 {
 	min-height:100%;
-	height:100%:
+	height:100%;
 }
 
 .main
 {
 	min-height:90%;
 	height:90%;
-	width:95%;
+	width:100%;
 	padding:0;
+	/*border:1px solid green;*/
 }
 
 .logo
@@ -31,21 +31,24 @@ html
 	height:10%;
 	width:30%;
 	float:right;
+    /*border: 1px solid #a0ffa0;*/
 }
 
 .info_block
 {
 	min-height: 90%;
 	height: 90%;
-	width: 45%;
+	width: 60%;
 	float:right;
+	/*border:1px solid blue;*/
 }
 
 .gallery
 {
 	min-height:100%;
 	height:100%;
-	width:600;
+	width:100%;
+	/*border:1px solid red;*/
 } 
 
 .empty
@@ -54,15 +57,16 @@ html
 	height:100%;
 	min-height:100%;
 	float:left;
-	border: 1px solid white;
+	/*border: 1px solid white;*/
 }
 
 .preview
 {
 	height:100%;
 	min-height:100%;
-	width:50%;
+	width:35%;
 	float:left;
+	/*border:1px dashed white;*/
 }
 
 #page
@@ -113,13 +117,19 @@ html
 
 #mainmenu
 {
-	--background:white url(bg_red.png) repeat-x left top;
+    float: right;
+    display:inline;
+    position: fixed;
+    /*border: 1px solid #ffffff;*/
+    width:60%;
+    position: absolute;
 }
 
 #mainmenu ul
 {
 	padding:6px 20px 5px 20px;
 	margin:0px;
+    float:right;
 }
 
 #mainmenu ul li
@@ -130,6 +140,7 @@ html
 #mainmenu ul li div
 {
 	display:inline;
+    background: #000000;
 }
 
 #divMenu
@@ -148,7 +159,7 @@ html
 	padding:5px 8px;
 }
 
-#mainmenu ul li a:hover 
+#mainmenu ul li a:hover
 {
 	color: white;
 	text-decoration:none;
@@ -159,6 +170,303 @@ html
 	color: white;
 	text-decoration:none;
 }
+
+/*вложенное меню 2 уровня */
+#mainmenu ul li div > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+    position: absolute;
+    left: 0px;
+    top: 25px;
+}
+
+#mainmenu ul li div > ul li {
+    float: left;
+    font-size:10pt;
+    margin: 0;
+    width: 200px;
+    text-align: left;
+}
+#mainmenu ul li div > ul li a {
+    color:#a6a6a6;
+    background-color:transparent;
+    font-size:14pt;
+    font-weight:bold;
+    text-decoration:none;
+    padding:5px 8px;
+}
+
+#mainmenu ul li:hover div > ul{
+    display: block;
+}
+#mainmenu ul li:hover, #mainmenu li.jshover {
+   /* background: #424242; */
+}
+/*Вложенное меню 3го уровня*/
+#mainmenu ul li ul li > ul
+{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+    position: absolute;
+    left:200px;
+    top: 42px;
+}
+
+#mainmenu ul li ul li > ul li {
+    float: left;
+    font-size:10pt;
+    margin: 0;
+    width: 200px;
+    text-align: left;
+}
+#mainmenu ul li ul li > ul li a {
+    color:#a6a6a6;
+    background-color:transparent;
+    font-size:14pt;
+    font-weight:bold;
+    text-decoration:none;
+    padding:5px 8px;
+}
+
+#mainmenu ul li ul li:hover > ul {
+    display: block;
+}
+/*#mainmenu ul li ul li:hover, #mainmenu ul li ul li.jshover {
+    background: red;
+}*/
+
+#mainmenu ul.children ul.children {display:none;}
+#mainmenu ul.children:hover ul.children {display:block;left:200px;}
+
+/********************************/
+/*версия для страницы с галереей*/
+/********************************/
+.main_gallery
+{
+    min-height:90%;
+    height:90%;
+    width:100%;
+    padding:0;
+   /* border:1px solid green;*/
+}
+
+.logo_gallery
+{
+    min-height:10%;
+    height:10%;
+    width:30%;
+    float:right;
+}
+
+.info_block_gallery
+{
+    min-height: 90%;
+    height: 90%;
+    width: 100%;
+    float:right;
+   /* border:1px solid blue;*/
+    position: relative;
+}
+
+.gallery_gallery
+{
+    min-height:80%;
+    height:80%;
+    width:75%;
+    /*border:1px solid red;*/
+    position: absolute;
+    margin: 0 auto;
+    left:10%;
+    margin-top: 5%;
+}
+
+.empty_gallery
+{
+    width:20%;
+    height:100%;
+    min-height:100%;
+    float:left;
+    /*border: 1px solid white;*/
+}
+
+.preview_gallery
+{
+    height:100%;
+    min-height:100%;
+    width:35%;
+    float:left;
+   /* border:1px dashed white;*/
+}
+
+#page_gallery
+{
+    background: black;
+    min-height: 100%;
+    height:100%;
+}
+
+#header_gallery
+{
+    margin: 0;
+    padding: 0;
+}
+
+#content_gallery
+{
+    padding: 20px;
+}
+
+#image-show_gallery
+{
+    position:relative;
+}
+
+#sidebar_gallery
+{
+    padding: 20px 20px 20px 0;
+}
+
+#footer_gallery
+{
+    margin-top:5px;
+    height:10%;
+    font-size: 0.8em;
+    text-align: center;
+    border-top: 1px solid #ae0d0d;
+    width:50%;
+    margin-left:25%;
+}
+
+#logo_gallery
+{
+    padding: 10px 20px;
+    font-size: 200%;
+    color: white
+}
+
+#mainmenu_gallery
+{
+    float: right;
+    display:inline;
+    /*border: 1px solid white;*/
+    height: 5%;
+    width:100%;
+}
+
+#mainmenu_gallery ul
+{
+    padding:6px 20px 5px 20px;
+    margin:0px;
+    float:right;
+}
+
+#mainmenu_gallery ul li
+{
+    display: inline;
+}
+
+#mainmenu_gallery ul li div
+{
+    display:inline;
+}
+
+#mainmenu_gallery ul li a
+{
+    color:#a6a6a6;
+    background-color:transparent;
+    font-size:18pt;
+    font-weight:bold;
+    text-decoration:none;
+    padding:5px 8px;
+}
+
+#mainmenu_gallery ul li a:hover
+{
+    color: white;
+    text-decoration:none;
+}
+
+#mainmenu_gallery ul li.active > a
+{
+    color: white;
+    text-decoration:none;
+}
+
+/*вложенное меню 2 уровня */
+#mainmenu_gallery ul li div > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+    position: absolute;
+    left: 0px;
+    top: 25px;
+    z-index: 100;
+    background: #000000;
+}
+
+#mainmenu_gallery ul li div > ul li {
+    float: left;
+    font-size:10pt;
+    margin: 0;
+    width: 200px;
+    text-align: left;
+    border-top: 1px solid white;
+}
+#mainmenu_gallery ul li div > ul li a {
+    color:#a6a6a6;
+    background-color:transparent;
+    font-size:14pt;
+    font-weight:bold;
+    text-decoration:none;
+    padding:5px 8px;
+}
+
+#mainmenu_gallery ul li div:hover > ul{
+    display: block;
+}
+#mainmenu_gallery ul li:hover, #mainmenu li.jshover {
+    /* background: #424242; */
+}
+/*Вложенное меню 3го уровня*/
+#mainmenu_gallery ul li ul li > ul
+{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+    position: absolute;
+    left:200px;
+    top: 42px;
+}
+
+#mainmenu_gallery ul li ul li > ul li {
+    float: left;
+    font-size:10pt;
+    margin: 0;
+    width: 200px;
+    text-align: left;
+}
+#mainmenu_gallery ul li ul li > ul li a {
+    color:#a6a6a6;
+    background-color:transparent;
+    font-size:14pt;
+    font-weight:bold;
+    text-decoration:none;
+    padding:5px 8px;
+}
+
+#mainmenu_gallery ul li ul li:hover > ul {
+    display: block;
+}
+
+/**********************/
+/*Снова общие элементы*/
+/**********************/
 
 div.flash-error, div.flash-notice, div.flash-success
 {
