--- a/css/screen.css
+++ b/css/screen.css
@@ -26,8 +26,8 @@ a img {border:none;}
 
 /* typography.css */
 html {font-size:100.01%;}
-body {font-size:75%;color:#222;background:#fff;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
-h1, h2, h3, h4, h5, h6 {font-weight:normal;color:yellow;}
+body {font-size:75%;color:#222;background:#fff;font-family:Palatino, Palatino Lynotype, Garamond, Verdana, Georgia, Times, Arial, Helvetica, serif, sans-serif;}
+h1, h2, h3, h4, h5, h6 {font-weight:normal;/*color:yellow;*/}
 h1 {font-size:2em;line-height:1;margin-bottom:0.5em;}
 h2 {font-size:1.6em;margin-bottom:0.75em;}
 h3 {font-size:1.4em;line-height:1;margin-bottom:1em;}
@@ -56,12 +56,12 @@ ul, ol {margin:0 1.5em 1.5em 0;padding-left:1.5em;}
 ul {list-style-type:disc;}
 ol {list-style-type:decimal;}
 dl {margin:0 0 1.5em 0;}
-dl dt {font-weight:bold;}
+dl dt {/*font-weight:bold;*/}
 dd {margin-left:1.5em;}
-table {margin-bottom:1.4em;width:100%;}
+table {/*margin-bottom:1.4em;*/width:100%;}
 th {font-weight:bold;}
 thead th {background:#c3d9ff;}
-th, td, caption {padding:4px 10px 4px 5px;}
+th, td, caption {/*padding:4px 10px 4px 5px;*/}
 tfoot {font-style:italic;}
 caption {background:#eee;}
 .small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
