--- a/css/main-white.css
+++ b/css/main-white.css
@@ -37,10 +37,18 @@ html
 
 .themeChange
 {
-    width: 15px;
-    height:15px;
+    width: 25px;
+    height:25px;
     border:0px;
     padding: 0px;
+}
+
+.themeChangeWrapper
+{
+    min-height: 5%;
+    height:5%;
+    width:100%;
+    position: relative;
 }
 
 .music
@@ -53,8 +61,8 @@ html
 
 .info_block
 {
-	min-height: 90%;
-	height: 90%;
+	min-height: 85%;
+	height: 85%;
 	width: 60%;
 	float:right;
 	/*border:1px solid blue;*/
