--- a/css/main.css
+++ b/css/main.css
@@ -35,13 +35,29 @@ html
    /* border: 1px solid #a0ffa0;*/
 }
 
+.content
+{
+    min-height: 80%;
+    height:80;
+    width:100%;
+    position:relative;
+}
+
 .themeChange
 {
-    width: 15px;
-    height:15px;
+    width: 25px;
+    height:25px;
     border:0px;
     padding: 0px;
 }
+
+.themeChangeWrapper
+ {
+     min-height: 5%;
+     height:5%;
+     width:100%;
+     position: relative;
+ }
 
 .music
 {
@@ -53,11 +69,10 @@ html
 
 .info_block
 {
-	min-height: 90%;
-	height: 90%;
+	min-height: 85%;
+	height: 85%;
 	width: 60%;
 	float:right;
-	/*border:1px solid blue;*/
 }
 
 .gallery
@@ -94,6 +109,23 @@ html
     font-size: 14pt;
     text-decoration:none;
     font-family: Palatino, Palatino Lynotype, Garamond, Verdana, Georgia, Times, Arial, Helvetica, serif;
+    position: relative;
+}
+
+.serviceTable
+{
+    font-size: 12pt;
+}
+
+.innerService
+{
+    cellpadding:10px;
+    cellspacing:10px;
+}
+
+.serviceTable td
+{
+    border-bottom: 1px;
 }
 
 #page
@@ -128,6 +160,8 @@ html
 	border-top: 1px solid #ae0d0d;
 	width:50%;
 	margin-left:25%;
+    position: relative;
+   /* bottom: 2%;*/
 }
 
 #logo
@@ -275,6 +309,7 @@ html
     height:90%;
     width:100%;
     padding:0;
+    position:absolute;
    /* border:1px solid green;*/
 }
 
@@ -294,6 +329,7 @@ html
     float:right;
    /* border:1px solid blue;*/
     position: relative;
+    overflow: visible;
 }
 
 .gallery_gallery
@@ -306,6 +342,7 @@ html
     margin: 0 auto;
     left:12%;
     margin-top: 5%;
+    overflow-Y: scroll;
 }
 
 .empty_gallery
