--- a/css/screen.css
+++ b/css/screen.css
@@ -13,7 +13,7 @@
 
 /* reset.css */
 html {margin:0;padding:0;border:0;}
-body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, /*table*/, caption, tbody, tfoot, thead, /*tr, th, td*/, article, aside, dialog, figure, footer, header, hgroup, nav, section {margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+body, div, span, object, iframe, h1, /*h2*/, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, /*table*/, caption, tbody, tfoot, thead, /*tr, th, td*/, article, aside, dialog, figure, footer, header, hgroup, nav, section {margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure, dialog, footer, header, hgroup, menu, nav, section {display:block;}
 body {line-height:1.5;background:white;}
 /*table {border-collapse:separate;border-spacing:0;}
@@ -27,9 +27,9 @@ a img {border:none;}
 /* typography.css */
 html {font-size:100.01%;}
 body {font-size:75%;color:#222;background:#fff;font-family:Palatino, Palatino Lynotype, Garamond, Verdana, Georgia, Times, Arial, Helvetica, serif, sans-serif;}
-h1, h2, h3, h4, h5, h6 {font-weight:normal;/*color:yellow;*/}
+h1, /*h2*/, h3, h4, h5, h6 {font-weight:normal;/*color:yellow;*/}
 h1 {font-size:2em;line-height:1;margin-bottom:0.5em;}
-h2 {font-size:1.6em;margin-bottom:0.75em;}
+/*h2 {font-size:1.6em;/*margin-bottom:0.75em;}*/
 h3 {font-size:1.4em;line-height:1;margin-bottom:1em;}
 h4 {font-size:1.2em;line-height:1.25;margin-bottom:1.25em;}
 h5 {font-size:1em;font-weight:bold;margin-bottom:1.5em;}
