--- a/css/main.css
+++ b/css/main.css
@@ -54,8 +54,8 @@ html
 
 .themeChangeWrapper
  {
-     min-height: 5%;
-     height:5%;
+     min-height: 1%;
+     height:1%;
      width:100%;
      position: relative;
  }
@@ -358,7 +358,7 @@ html
     width:100%;
     padding:0;
     position:absolute;
-   /* border:1px solid green;*/
+    /*border:1px solid green;*/
 }
 
 .logo_gallery
@@ -371,11 +371,11 @@ html
 
 .info_block_gallery
 {
-    min-height: 90%;
-    height: 90%;
+    min-height: 94%;
+    height: 94%;
     width: 100%;
     float:right;
-   /* border:1px solid blue;*/
+    /*border:1px solid blue;*/
     position: relative;
     overflow: visible;
 }
@@ -384,12 +384,12 @@ html
 {
     min-height:80%;
     height:80%;
-    width:75%;
-   /* border:1px solid red; */
+    width:80%;
+    /*border:1px solid red;*/
     position: absolute;
     margin: 0 auto;
-    left:12%;
-    margin-top: 5%;
+    left:10%;
+    /*margin-top: 5%;*/
     /*overflow-Y: auto*/;
 }
 
@@ -397,12 +397,14 @@ html
 {
     min-height: 90%;
     height: 90%;
-    width: 70%;
+    width: 75%;
     position: absolute;
     margin:0 auto;
-    left:12%;
+    left:10%;
     margin-top:5%;
     overflow: hidden;
+    /*margin-bottom: 10px;*/
+    /*border: 1px solid white;*/
 }
 
 .empty_gallery
