--- a/css/main-white.css
+++ b/css/main-white.css
@@ -10,6 +10,7 @@ body
     min-height:100%;
     width:100%;
     overflow-y: hidden;
+    position: relative;
 }
 
 html
@@ -18,30 +19,29 @@ html
     height:100%;
 }
 
+.text
+{
+    margin-right:20%;
+    color:black;
+}
+
 .main
 {
     min-height:90%;
     height:90%;
     width:100%;
     padding:0;
-    /*border:1px solid green;*/
+    /*border:1px solid orange;*/
 }
 
 .logo
 {
     min-height:10%;
     height:10%;
-    width:60%;
-    float:right;
-    /* border: 1px solid #a0ffa0;*/
-}
-
-.content
-{
-    min-height: 80%;
-    height:80;
     width:100%;
-    position:relative;
+    float:right;
+    /*border: 1px solid #a0ffa0;*/
+    position: absolute;
 }
 
 .themeChange
@@ -60,20 +60,13 @@ html
     position: relative;
 }
 
-.music
-{
-    width:50%;
-    /*border:1px dashed #ffffff;*/
-    float:right;
-    height:100%;
-}
-
 .info_block
 {
     min-height: 85%;
     height: 85%;
     width: 60%;
     float:right;
+    /*border:1px dashed blue;*/
 }
 
 .gallery
@@ -81,16 +74,26 @@ html
     min-height:100%;
     height:100%;
     width:100%;
-    /*border:1px solid red;*/
+    /*border:1px solid green;*/
 }
 
-.empty
+/*.empty*/
+/*{*/
+/*width:20%;*/
+/*height:100%;*/
+/*min-height:100%;*/
+/*float:left;*/
+/*border: 1px solid white;*/
+/*}*/
+
+.main_wrapper
 {
-    width:20%;
-    height:100%;
-    min-height:100%;
-    float:left;
-    /*border: 1px solid white;*/
+    top:15%;
+    height:85%;
+    min-height: 85%;
+    width:100%;
+    /*border: 1px dashed #ff00ff;*/
+    position: relative;
 }
 
 .preview
@@ -100,28 +103,46 @@ html
     width:35%;
     float:left;
     /*border:1px dashed white;*/
+    position: absolute;
 }
 
-.service
+.ph-content
 {
-    height: 150px;
-    width:  600px;
-    /*border: 1px solid white;*/
-    font-size: 14pt;
-    text-decoration:none;
-    font-family: Palatino, Palatino Lynotype, Garamond, Verdana, Georgia, Times, Arial, Helvetica, serif;
-    position: relative;
+    min-height: 100%;
+    height:100%;
+    width:100%;
+    position:absolute;
+    /*border:1px dashed #b8860b;*/
+    overflow: auto;
+    font-color:black;
 }
+
+.ph-content-wrapper
+{
+    top:3%;
+    left:37%;
+    min-height: 97%;
+    height: 97%;
+    width: 60%;
+    position: absolute;
+    overflow: hidden;
+    /*border: 1px solid #ffffff;*/
+}
+
+/*.service*/
+/*{*/
+/*height: 150px;*/
+/*width:  600px;*/
+/*border: 1px solid white;*/
+/*font-size: 14pt;*/
+/*text-decoration:none;*/
+/*font-family: Palatino, Palatino Lynotype, Garamond, Verdana, Georgia, Times, Arial, Helvetica, serif;*/
+/*position: relative;*/
+/*}*/
 
 .serviceTable
 {
     font-size: 12pt;
-}
-
-.innerService
-{
-    /*cellpadding:10px;*/
-    /*cellspacing:10px;*/
 }
 
 .innerService h2
@@ -137,15 +158,15 @@ html
     -khtml-margin-before:0;
 }
 
+.serviceAlert
+{
+    color:red;
+}
+
 .innerService h2::before
 {
     margin-before:0;
     -webkit-margin-before:0;
-}
-
-.serviceAlert
-{
-    color:red;
 }
 
 .innerService a
@@ -165,7 +186,7 @@ html
 
 .innerService a.active
 {
-    color: white;
+    color: black;
     text-decoration:none;
 }
 
@@ -181,21 +202,21 @@ html
     height:100%;
 }
 
-#header
-{
-    margin: 0;
-    padding: 0;
-}
+/*#header*/
+/*{*/
+/*margin: 0;*/
+/*padding: 0;*/
+/*}*/
 
-#image-show
-{
-    position:relative;
-}
+/*#image-show*/
+/*{*/
+/*position:relative;*/
+/*}*/
 
-#sidebar
-{
-    padding: 20px 20px 20px 0;
-}
+/*#sidebar*/
+/*{*/
+/*padding: 20px 20px 20px 0;*/
+/*}*/
 
 #footer
 {
@@ -210,50 +231,40 @@ html
     /* bottom: 2%;*/
 }
 
-
-
-#logo
-{
-    padding: 10px 20px;
-    font-size: 18pt;
-    font-family: Palatino, Palatino Lynotype, Garamond, Verdana, Georgia, Times, Arial, Helvetica, serif;
-    color: white;
-    width:60%;
-
-}
-
 #mainmenu
 {
+    top:10%;
     float: right;
     display:inline;
-    position: fixed;
-    /*border: 1px solid #ffffff;*/
-    width:60%;
+    /*position: fixed;*/
+    /*border: 1px solid red;*/
+    width:100%;
+    height:5%;
     position: absolute;
 }
 
 #mainmenu ul
 {
-    padding:6px 20px 5px 20px;
+    /*padding:6px 20px 5px 20px;*/
     margin:0px;
     float:right;
+    /*border:1px solid green;*/
 }
 
 #mainmenu ul li
 {
     display: inline;
-}
-
-#mainmenu ul li div
-{
-    display:inline;
-    background: #ffffff;
+    height: 100%;
+    /*border:1px solid #adff2f;*/
+    position: relative;
 }
 
 #divMenu
 {
     display:inline;
     position:relative;
+    height: 100%;
+    border:1px solid white;
 }
 
 #mainmenu ul li a
@@ -264,40 +275,45 @@ html
     font-family: Palatino, Palatino Lynotype, Garamond, Verdana, Georgia, Times, Arial, Helvetica, serif;
     /*font-weight:bold*/;
     text-decoration:none;
-    padding:5px 8px;
+    /*//padding:5px 8px;*/
+    padding-right: 8px;
 }
 
+/*#mainmenu ul li:hover a*//*:hover*/
 #mainmenu ul li a:hover
 {
     color: black;
     text-decoration:none;
 }
 
-#mainmenu ul li.active a
+#mainmenu ul li.active > a
 {
     color: black;
     text-decoration:none;
 }
 
 /*вложенное меню 2 уровня */
-#mainmenu ul li div > ul {
+#mainmenu ul ul {
     list-style: none;
     padding: 0;
     margin: 0;
     display: none;
     position: absolute;
     left: 0px;
-    top: 25px;
+    top: 80%;
+    /*position: absolute;*/
+    z-index: 100;
+    background: #ffffff;
 }
 
-#mainmenu ul li div > ul li {
+#mainmenu ul ul li {
     float: left;
     font-size:10pt;
     margin: 0;
     width: 200px;
     text-align: left;
 }
-#mainmenu ul li div > ul li a {
+#mainmenu ul ul li a {
     color:#858585;
     background-color:transparent;
     font-size:12pt;
@@ -305,14 +321,14 @@ html
     padding:5px 8px;
 }
 
-#mainmenu ul li:hover div > ul{
+#mainmenu ul li:hover > ul {
     display: block;
 }
 #mainmenu ul li:hover, #mainmenu li.jshover {
     /* background: #424242; */
 }
 /*Вложенное меню 3го уровня*/
-#mainmenu ul li ul li > ul
+#mainmenu ul ul ul
 {
     list-style: none;
     padding: 0;
@@ -320,17 +336,19 @@ html
     display: none;
     position: absolute;
     left:200px;
-    top: 42px;
+    top: 0px;
+    z-index: 100;
+    background: #ffffff;
 }
 
-#mainmenu ul li ul li > ul li {
+#mainmenu ul ul ul li {
     float: left;
     font-size:10pt;
     margin: 0;
     width: 200px;
     text-align: left;
 }
-#mainmenu ul li ul li > ul li a {
+#mainmenu ul ul ul li a {
     color:#858585;
     background-color:transparent;
     font-size:12pt;
@@ -338,15 +356,9 @@ html
     padding:5px 8px;
 }
 
-#mainmenu ul li ul li:hover > ul {
+#mainmenu ul ul li:hover > ul {
     display: block;
 }
-/*#mainmenu ul li ul li:hover, #mainmenu ul li ul li.jshover {
-    background: red;
-}*/
-
-#mainmenu ul.children ul.children {display:none;}
-#mainmenu ul.children:hover ul.children {display:block;left:200px;}
 
 /********************************/
 /*версия для страницы с галереей*/
@@ -357,27 +369,29 @@ html
     height:90%;
     width:100%;
     padding:0;
-    position:absolute;
-    /* border:1px solid green;*/
+    /*position:absolute;*/
+    /*border:1px solid green;*/
 }
 
 .logo_gallery
 {
     min-height:10%;
     height:10%;
-    width:30%;
+    width:100%;
     float:right;
+    position: absolute;
 }
 
 .info_block_gallery
 {
-    min-height: 95%;
-    height: 95%;
+    top:15%;
+    min-height: 85%;
+    height: 85%;
     width: 100%;
     float:right;
     /*border:1px solid blue;*/
     position: relative;
-    overflow: visible;
+    /*overflow: visible;*/
 }
 
 .gallery_gallery
@@ -427,7 +441,7 @@ html
 
 #page_gallery
 {
-    background: black;
+    background: white;
     min-height: 100%;
     height:100%;
 }
@@ -471,128 +485,9 @@ html
     color: white
 }
 
-#mainmenu_gallery
-{
-    float: right;
-    display:inline;
-    /*border: 1px solid white;*/
-    height: 5%;
-    width:100%;
-}
-
-#mainmenu_gallery ul
-{
-    padding:6px 20px 5px 20px;
-    margin:0px;
-    float:right;
-}
-
-#mainmenu_gallery ul li
-{
-    display: inline;
-}
-
-#mainmenu_gallery ul li div
-{
-    display:inline;
-}
-
-#mainmenu_gallery ul li a
-{
-    color:#858585;
-    background-color:transparent;
-    font-size:18pt;
-    text-decoration:none;
-    padding:5px 8px;
-    font-family: Palatino, Palatino Lynotype, Garamond, Verdana, Georgia, Times, Arial, Helvetica, serif;
-}
-
-#mainmenu_gallery ul li a:hover
-{
-    color: black;
-    text-decoration:none;
-}
-
-#mainmenu_gallery ul li.active > a
-{
-    color: black;
-    text-decoration:none;
-}
-
-/*вложенное меню 2 уровня */
-#mainmenu_gallery ul li div > ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: none;
-    position: absolute;
-    left: 0px;
-    top: 25px;
-    z-index: 100;
-    background: #ffffff;
-}
-
-#mainmenu_gallery ul li div > ul li {
-    float: left;
-    font-size:10pt;
-    margin: 0;
-    width: 200px;
-    text-align: left;
-    /* border-top: 1px solid white; */
-}
-#mainmenu_gallery ul li div > ul li a {
-    color:#858585;
-    background-color:transparent;
-    font-size:12pt;
-    text-decoration:none;
-    padding:5px 8px;
-}
-
-#mainmenu_gallery ul li div:hover > ul{
-    display: block;
-}
-#mainmenu_gallery ul li:hover, #mainmenu li.jshover {
-    /* background: #424242; */
-}
-/*Вложенное меню 3го уровня*/
-#mainmenu_gallery ul li ul li > ul
-{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: none;
-    position: absolute;
-    left:200px;
-    top: 44px;
-}
-
-#mainmenu_gallery ul li ul li > ul li {
-    float: left;
-    font-size:10pt;
-    margin: 0;
-    width: 200px;
-    text-align: left;
-}
-#mainmenu_gallery ul li ul li > ul li a {
-    color:#858585;
-    background-color:transparent;
-    font-size:12pt;
-    text-decoration:none;
-    padding:5px 8px;
-}
-
-#mainmenu_gallery ul li ul li:hover > ul {
-    display: block;
-}
-
 /**********************/
 /*Снова общие элементы*/
 /**********************/
-/*#categories
-{
-    margin-left:47%;
-}*/
-
 #categories ul
 {
     padding:6px 20px 5px 20px;
